// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login redirection should redirect to home page on successful login 1`] = `
<Redirect
  to="/"
/>
`;

exports[`Login redirection should redirect to referrer page on successful login 1`] = `
<Redirect
  to="/some/page"
/>
`;

exports[`Login should display an error if any field is empty 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(ReactComponent)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <styled.div>
      Username and Password are both required
    </styled.div>
    <Themed(Styled(Styled(Input)))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value=""
    />
    <Themed(Styled(Styled(Input)))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <ForwardRef(Button)
      color="main"
      size="large"
      title="Log in"
      type="submit"
    >
      Log in
    </ForwardRef(Button)>
  </styled.form>
  <Disclaimer />
  <Styled(Copyright) />
</styled.div>
`;

exports[`Login should display an error on unsuccessful login 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(ReactComponent)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <styled.div>
      Username and Password do not match
    </styled.div>
    <Themed(Styled(Styled(Input)))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="foo"
    />
    <Themed(Styled(Styled(Input)))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="bar"
    />
    <ForwardRef(Button)
      color="main"
      size="large"
      title="Log in"
      type="submit"
    >
      Log in
    </ForwardRef(Button)>
  </styled.form>
  <Disclaimer />
  <Styled(Copyright) />
</styled.div>
`;

exports[`Login should render login form by default 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(ReactComponent)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <styled.div />
    <Themed(Styled(Styled(Input)))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value=""
    />
    <Themed(Styled(Styled(Input)))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <ForwardRef(Button)
      color="main"
      size="large"
      title="Log in"
      type="submit"
    >
      Log in
    </ForwardRef(Button)>
  </styled.form>
  <Disclaimer />
  <Styled(Copyright) />
</styled.div>
`;
